[fix][test] Fix compile error in OffloadPoliciesTest
Replace invalid Collections.singletonMap with multi-arg form and
Java 9+ Map.of() with Java 8 compatible alternatives.

(cherry picked from commit f7fd2bbbe0c6c9c388c0e6eefc2947f5fc9cc17f)